--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </tr>
             <tr>
                 <td>Calça Jeans</td>
-                <td>Azul</td>
+                <td>Preta</td>
                 <td>GG</td>
                 <td>R$ 100,00</td>
                 <td>Esgotado</td>
