trocado de calça jeans para calça de linho

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <td>Em estoque</td>
             </tr>
             <tr>
-                <td>Calça Jeans</td>
+                <td>Calça de linho</td>
                 <td>Preta</td>
                 <td>GG</td>
                 <td>R$ 100,00</td>
